--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,11 @@ textarea {
   height: 10em;
 }
 
+textarea:focus,
+input:focus {
+  outline: 2px solid rgb(86, 43, 129);
+}
+
 img {
   object-fit: cover;
   width: 100%;
