--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,12 @@
 body {
   background: rgb(240, 240, 240);
-  font-family: Cairo, sans-serif;
+  font-family: "Proza Libre", sans-serif;
+  letter-spacing: 0.05rem;
 }
 
 input {
   width: 100%;
-  line-height: 2rem;
+  line-height: 1.5rem;
 }
 
 textarea {
@@ -16,13 +17,13 @@ textarea {
 
 textarea:focus,
 input:focus {
-  outline: 2px solid rgb(86, 43, 129);
+  outline: 3px solid rgb(86, 43, 129);
 }
 
 img {
   object-fit: cover;
   width: 100%;
-  max-height: 300px;
+  max-height: 400px;
 }
 
 label {
@@ -31,12 +32,8 @@ label {
   margin-top: 1.5rem;
 }
 
-.font-300 {
-  font-weight: 300;
-}
-
-.font-500 {
-  font-weight: 500;
+.font-200 {
+  font-weight: 200;
 }
 
 .font-700 {
@@ -64,9 +61,13 @@ label {
   margin: 0.5rem 0;
 }
 
-.gray-border {
+.text-boxes {
+  padding: 0.5rem;
   border: 1px solid rgb(196, 196, 196);
   border-radius: 5px;
+  font-family: "Open Sans", sans-serif;
+  letter-spacing: 0.05rem;
+  font-size: 1rem;
 }
 
 .save-button {
