--- a/css/styles.css
+++ b/css/styles.css
@@ -32,6 +32,15 @@ label {
   margin-top: 1.5rem;
 }
 
+ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+h2 {
+  margin-top: 0;
+}
+
 .font-200 {
   font-weight: 200;
 }
