--- a/css/styles.css
+++ b/css/styles.css
@@ -41,6 +41,10 @@ p {
   white-space: pre-line;
 }
 
+a {
+  text-decoration: none;
+}
+
 .font-200 {
   font-weight: 200;
 }
@@ -85,4 +89,12 @@ p {
   padding: 0.5rem 1.2rem;
   font-size: 1rem;
   margin: 1rem 0;
+}
+
+.align-center {
+  align-items: center;
+}
+
+.gap-20 {
+  column-gap: 20px;
 }
