--- a/css/styles.css
+++ b/css/styles.css
@@ -89,6 +89,7 @@ a {
   padding: 0.5rem 1.2rem;
   font-size: 1rem;
   margin: 1rem 0;
+  cursor: pointer;
 }
 
 .align-center {
@@ -97,4 +98,16 @@ a {
 
 .gap-20 {
   column-gap: 20px;
+}
+
+.space-between {
+  justify-content: space-between;
+}
+
+.relative {
+  position: relative;
+}
+
+.absolute {
+  position: absolute;
 }
