--- a/css/styles.css
+++ b/css/styles.css
@@ -21,9 +21,10 @@ input:focus {
 }
 
 img {
+  object-position: center;
   object-fit: cover;
   width: 100%;
-  max-height: 350px;
+  height: 350px;
 }
 
 label {
@@ -60,6 +61,10 @@ a {
 
 .text-right {
   text-align: right;
+}
+
+.text-center {
+  text-align: center;
 }
 
 .tb-margin-dot7 {
